src/test/deca/syntax/invalid/readFloat_variable.deca
// Description:
//    On utilise le mot readFloat comme une variable
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
    int readFloat = 3;
}
